@@ -21,6 +21,7 @@
   
   <handler class="org.pustefixframework.config.contextxmlservice.parser.SSLParsingHandler">
     <match>/c:context-xml-service-config/c:global-config//c:force-ssl</match>
+    <match>/c:context-xml-service-config/c:pagerequest//c:force-ssl</match>
   </handler>
   
   <handler class="org.pustefixframework.config.contextxmlservice.parser.ContextXMLRegisterGlobalPropertiesParsingHandler" run-order="end">
@@ -179,14 +180,18 @@
   
   <handler id="org.pustefixframework.config.customization.WhenParsingHandler" class="org.pustefixframework.config.customization.CustomizationWhenParsingHandler">
     <match>/c:context-xml-service-config/c:servletinfo/c:choose/c:when</match>
+    <match>/c:context-xml-service-config/c:global-config/c:choose/c:when</match>
     <match>/c:context-xml-service-config/c:pagerequest//c:properties/c:choose/c:when</match>
+    <match>/c:context-xml-service-config/c:pagerequest/c:choose/c:when</match>
     <match>/c:context-xml-service-config/c:properties/c:choose/c:when</match>
     <match>/c:context-xml-service-config/c:context/c:resource/c:properties/c:choose/c:when</match>
   </handler>
   
   <handler id="org.pustefixframework.config.customization.OtherwiseParsingHandler" class="org.pustefixframework.config.customization.CustomizationOtherwiseParsingHandler">
     <match>/c:context-xml-service-config/c:servletinfo/c:choose/c:otherwise</match>
+    <match>/c:context-xml-service-config/c:global-config/c:choose/c:otherwise</match>
     <match>/c:context-xml-service-config/c:pagerequest//c:properties/c:choose/c:otherwise</match>
+    <match>/c:context-xml-service-config/c:pagerequest/c:choose/c:otherwise</match>
     <match>/c:context-xml-service-config/c:properties/c:choose/c:otherwise</match>
     <match>/c:context-xml-service-config/c:context/c:resource/c:properties/c:choose/c:otherwise</match>
   </handler>
